# PiPico

blink/: CMakeLists.txt  blink.c
i2c/: CMakeLists.txt
i2c/i2c_master_slave/: CMakeLists.txt
i2c/i2c_master_slave/i2c_master/: CMakeLists.txt
i2c/i2c_master_slave/i2c_slave/: CMakeLists.txt  i2c_slave.c
spi/spi_master_slave/spi_slave/: CMakeLists.txt  spi_slave.c  spi_slave_w_input.c
